--- a/index.html
+++ b/index.html
@@ -1,20 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">    
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css">
-    <title>Document</title>
+    <title>Mario Bros</title>
 </head>
 <body>
-
+    
     <header>
-        <div class = "contenedor">
-            <h1>Super Mario Bros The Movie</h1>
-            <div class = "encabezado"></div>
-        </div>
+        <img src="./img/logo_mariobros.png" alt="logo">
+        <h1>Super Mario Bros The Movie</h1>
     </header>
+
+    <nav>
+        <a class="active" href="./index.html">Inicio</a>
+        <a href="./personajes.html">Personajes</a>
+        <a href="#">Informacion</a>
+        <a href="#">Contacto</a>
+    </nav>
+
+    <main>
+
+        <h2>Super Mario The Movie - Posters</h2>
+
+        <div class="galeria">
+            <img src="./img/poster_mario2.jpg" alt="">
+            <img src="./img/poster_mario5.jpg" alt="">
+            <img src="./img/poster_mario6.jpg" alt="">
+            <img src="./img/poster_mario7.jpg" alt="">
+            <img src="./img/poster_mario8.jpg" alt="">
+            <img src="./img/poster_mario9.jpg" alt="">
+        </div>
+
+    </main>
+
+    <footer>
+        <h4>Super Mario The Movie 2023 &reg;</h4>
+    </footer>
+
+
     
 </body>
 </html>
