--- a/contacto.html
+++ b/contacto.html
@@ -5,17 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario</title>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <form action="">
-        <label for="Nombre">Nombre:</label>
-        <input type="text" name="Nombre" id="Nombre">
-        <label for="Email">Email:</label>
-        <input type="text" name="Email" id="Email">
-        <label for="Mesaje">Mensaje:</label>
-        <input type="text" name="Mensaje" id="Mensaje">
-        <input type="submit" value="submit">
-    </form>
+    
+    
+    <header>
+        <img src="./img/logo_mariobros.png" alt="logo">
+        <h1>Super Mario Bros The Movie</h1>
+    </header>
 
+
+
+    <div class = "contform">
+
+        <div class = "form">
+
+            <form action="./show_data.html" method="get">
+
+                <div>
+                    <label for="Nombre">Nombre:</label>
+                    <input type="text" name="Nombre" id="Nombre">
+                </div>
+                <div>
+                    <label for="Nombre">Email:</label>
+                    <input type="text" name="Nombre" id="Nombre">
+                </div>
+                <div>
+                    <label for="Nombre">Mensaje:</label>
+                    <textarea type="text" name="Nombre" id="Nombre"></textarea>
+                </div>
+                <div class = "btn">
+                    <button id="btncont" type="submit">Enviar</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <footer>
+        <h4>Super Mario The Movie 2023 &reg;</h4>
+    </footer>
 </body>
 </html>
