--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="contacto.html">
     <link rel="stylesheet" href="estilo.css">
     <title>Mario Bros</title>
 </head>
@@ -17,8 +18,8 @@
     <nav>
         <a class="active" href="./index.html">Inicio</a>
         <a href="./personajes.html">Personajes</a>
-        <a href="#">Informacion</a>
-        <a href="#">Contacto</a>
+        <a href="./infomacion.html">Informacion</a>
+        <a href="./contacto.html">Contacto</a>
     </nav>
 
     <main>
