--- a/infomacion.html
+++ b/infomacion.html
@@ -14,7 +14,9 @@
         <h1>Super Mario Bros The Movie</h1>
     </header>
 
-    <dl> <h1>Un Fontanero llamado Mario viaja a travez de un laberinto subterraneo con su hermano,     Luigi. Tratndo de Salvar a una princesa capturada. </h1> <br><br><br>
+    <h1 class = "info">Un Fontanero llamado Mario viaja a travez de un laberinto subterraneo con su hermano,     Luigi. Tratndo de Salvar a una princesa capturada. </h1><br><br>
+
+    <dl>
         <dt><h2>Direccion:</h2></dt>
         <dd><h3>Aaron Horbath - Michael Jelenic - Pierre Leduc</h3></dd><br>
         <dt><h2>Guion:</h2></dt>
@@ -22,6 +24,57 @@
         <dt><h2>Reparto Pricipal:</h2></dt>
         <dd><h3>Chris Pratt - Anya Taylor Joy - Charlie Day</h3></dd>
     </dl>
+
+    <table>
+        
+        <thead>
+            <tr>
+                <th rowspan="5">Area</th>
+                <th rowspan="5">Release date</th>
+                <th rowspan="5">Opening</th>
+                <th rowspan="5">Gross</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Reino Unido</td>
+                <td>7 de abril</td>
+                <td>$199999</td>
+                <td>$3400000</td>
+            </tr>
+            <tr>
+                <td>Fracia</td>
+                <td>7 de abril</td>
+                <td>$32949883</td>
+                <td>$9392002</td>
+            </tr>
+            <tr>
+                <td>Alemania</td>
+                <td>7 de abril</td>
+                <td>$929238823</td>
+                <td>$39239839</td>
+            </tr>
+            <tr>
+                <td>España</td>
+                <td>6 de abril</td>
+                <td>$23000999</td>
+                <td>$23400008</td>
+            </tr>
+            <tr>
+                <td>Italia</td>
+                <td>5 de abril</td>
+                <td>$539988299</td>
+                <td>$872293930</td>
+            </tr>
+            <tr>
+                <td>Paises bajos</td>
+                <td>8 de abril</td>
+                <td>$893343872</td>
+                <td>$672238723</td>
+            </tr>
+            
+        </tbody>
+    </table>
 
     <footer>
         <h4>Super Mario The Movie 2023 &reg;</h4>
